<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#2E2E2E"
        android:elevation="-1dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/b_wallpaper" />

    <TextView
        android:id="@+id/material1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/materialb1"
        android:textAlignment="center"
        android:textColor="@color/red"
        app:autoSizeMaxTextSize="15dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent="0.25" />

    <TextView
        android:id="@+id/material1num"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="0"
        android:textAlignment="center"
        android:textColor="@color/red"
        app:autoSizeMaxTextSize="15dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/material1"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent="0.25" />

    <TextView
        android:id="@+id/material2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/materialb2"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:visibility="invisible"
        app:autoSizeMaxTextSize="15dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/material1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent="0.25" />

    <TextView
        android:id="@+id/material2num"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="0"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:visibility="invisible"
        app:autoSizeMaxTextSize="15dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/material1num"
        app:layout_constraintTop_toBottomOf="@+id/material2"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent="0.25" />

    <TextView
        android:id="@+id/material3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/materialb3"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:visibility="invisible"
        app:autoSizeMaxTextSize="15dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/material2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent="0.25" />

    <TextView
        android:id="@+id/material3num"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="0"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:visibility="invisible"
        app:autoSizeMaxTextSize="15dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/material2num"
        app:layout_constraintTop_toBottomOf="@+id/material3"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent="0.25" />

    <TextView
        android:id="@+id/material4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/materialb4"
        android:textAlignment="center"
        android:textColor="@color/money"
        app:autoSizeMaxTextSize="15dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/material3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent="0.25" />

    <TextView
        android:id="@+id/material4num"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="0"
        android:textAlignment="center"
        android:textColor="@color/money"
        app:autoSizeMaxTextSize="15dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/material3num"
        app:layout_constraintTop_toBottomOf="@+id/material4"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent="0.25" />

    <TextView
        android:id="@+id/messageBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/bat_screen"
        android:gravity="bottom|center"
        android:scrollbars="vertical"
        android:text="@string/messageBox"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/material2num"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent="1" />

    <TextView
        android:id="@+id/actionBox1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/action_box_disabled"
        android:gravity="center"
        android:scrollbars="vertical"
        android:text="@string/actionBox"
        android:textColor="@color/bat_screen"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageBox"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent="1" />

    <TextView
        android:id="@+id/actionBox2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/action_box_disabled"
        android:gravity="center"
        android:scrollbars="vertical"
        android:text="@string/actionBox"
        android:textColor="@color/bat_screen"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actionBox1"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent="1" />

    <TextView
        android:id="@+id/actionBox3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/action_box_disabled"
        android:gravity="center"
        android:scrollbars="vertical"
        android:text="@string/actionBox"
        android:textColor="@color/bat_screen"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actionBox2"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent="1" />


    <TextView
        android:id="@+id/highlight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/bat_screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/material2"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintWidth_percent="1" />

    <ImageView
        android:id="@+id/batarang"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintWidth_percent="0.25"
        app:srcCompat="@drawable/batarang" />

    <ImageView
        android:id="@+id/batarang_sell"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/batarang"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="@+id/batarang"
        app:layout_constraintTop_toBottomOf="@+id/batarang"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintWidth_percent="0.25"
        app:srcCompat="@drawable/batarang_sell" />

    <ImageView
        android:id="@+id/batsuit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintWidth_percent="0.25"
        app:srcCompat="@drawable/batsuit" />

    <Switch
        android:id="@+id/sw_batarang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_self"
        android:visibility="gone"
        android:thumbTint="@color/batman"
        android:trackTint="@color/red"
        app:layout_constraintBottom_toBottomOf="@+id/batarang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/batarang"
        app:layout_constraintTop_toTopOf="@+id/batarang" />

    <Switch
        android:id="@+id/sw_batarang_sell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_self"
        android:visibility="gone"
        android:thumbTint="@color/batman"
        android:trackTint="@color/red"
        app:layout_constraintBottom_toBottomOf="@+id/batarang_sell"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/batarang_sell"
        app:layout_constraintTop_toTopOf="@+id/batarang_sell" />

    <SeekBar
        android:id="@+id/batarang_bar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:max="100"
        android:min="1"
        android:progress="50"
        android:progressBackgroundTint="@color/white"
        android:progressTint="@color/green"
        android:thumbTint="@color/green"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/batarang_sell"
        app:layout_constraintEnd_toEndOf="@id/batarang"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="@id/batarang"
        app:layout_constraintTop_toBottomOf="@+id/batarang"
        app:layout_constraintWidth_percent="0.45" />

    <TextView
        android:id="@+id/bar_percent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="50 %"
        android:visibility="invisible"
        android:elevation="1dp"
        android:textColor="@color/money"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/batarang_bar"
        app:layout_constraintEnd_toEndOf="@+id/batarang_bar"
        app:layout_constraintStart_toStartOf="@+id/batarang_bar"
        app:layout_constraintTop_toTopOf="@+id/batarang_bar" />

    <TextView
        android:id="@+id/plus_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+1"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/batarang"
        app:layout_constraintEnd_toEndOf="@+id/batarang"
        app:layout_constraintStart_toStartOf="@+id/batarang"
        app:layout_constraintTop_toTopOf="@+id/batarang" />

    <TextView
        android:id="@+id/plus_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+2"
        android:textColor="@color/whiteish"
        android:textSize="30dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/batarang"
        app:layout_constraintEnd_toEndOf="@+id/batarang"
        app:layout_constraintStart_toStartOf="@+id/batarang"
        app:layout_constraintTop_toTopOf="@+id/batarang" />

    <TextView
        android:id="@+id/plus_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+3"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/batarang"
        app:layout_constraintEnd_toEndOf="@+id/batarang"
        app:layout_constraintStart_toStartOf="@+id/batarang"
        app:layout_constraintTop_toTopOf="@+id/batarang" />

    <TextView
        android:id="@+id/minus_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+1"
        android:textColor="@color/green"
        android:textSize="30dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/batarang_sell"
        app:layout_constraintEnd_toEndOf="@+id/batarang_sell"
        app:layout_constraintStart_toStartOf="@+id/batarang_sell"
        app:layout_constraintTop_toTopOf="@+id/batarang_sell" />

    <TextView
        android:id="@+id/minus_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+1"
        android:textColor="@color/money"
        android:textSize="30dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/batarang_sell"
        app:layout_constraintEnd_toEndOf="@+id/batarang_sell"
        app:layout_constraintStart_toStartOf="@+id/batarang_sell"
        app:layout_constraintTop_toTopOf="@+id/batarang_sell" />

    <TextView
        android:id="@+id/minus_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+1"
        android:textColor="@color/green"
        android:textSize="30dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/batarang_sell"
        app:layout_constraintEnd_toEndOf="@+id/batarang_sell"
        app:layout_constraintStart_toStartOf="@+id/batarang_sell"
        app:layout_constraintTop_toTopOf="@+id/batarang_sell" />

</androidx.constraintlayout.widget.ConstraintLayout>